Added first review game and added a status for reviewing in html

--- a/public/index.html
+++ b/public/index.html
@@ -33,89 +33,32 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="rue">Look at me!</div>
     <header></header>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
     -->
     <section id="game_cards" class="grid-container">
-      <div id="game_card_01">
-        <img src="/img/testpit.jpg">
-        <div class="card_reviewer">
-          <div class="card_reviewer-colors-top"></div>
-          <div class="card_reviewer-diamond"></div>
-          <div class="card_reviewer-colors-bottom"></div>
-
-        </div>
-        <div class="card_stats">
-          <div>
-            <div class="card_stats-number">46</div>
-            <div class="card_stats-text">Hours played</div>
-          </div>
-          <div>
-            <div class="card_stats-number">32<div class="card_stats-subscript"> / 80</div></div>
-            <div class="card_stats-text">Achievements</div>
-          </div>
-        </div>
-      </div>
       <div>
-        <img src="/img/testdbz.jpg">
+        <img src="/img/breakarts2.jpg">
         <div class="card_reviewer">
           <div class="card_reviewer-colors-top"></div>
-          <div class="card_reviewer-diamond"></div>
+          <div class="card_reviewer-text"> In Review </div>
           <div class="card_reviewer-colors-bottom"></div>
 
         </div>
         <div class="card_stats">
           <div>
-            <div class="card_stats-number">46</div>
+            <div class="card_stats-number">0</div>
             <div class="card_stats-text">Hours played</div>
           </div>
           <div>
-            <div class="card_stats-number">32<div class="card_stats-subscript">/80</div></div>
+            <div class="card_stats-number">0<div class="card_stats-subscript"> / 20</div></div>
             <div class="card_stats-text">Achievements</div>
           </div>
         </div>
       </div>
-      <div>
-        <img src="/img/testbreach.jpg">
-        <div class="card_reviewer">
-          <div class="card_reviewer-colors-top"></div>
-          <div class="card_reviewer-diamond"></div>
-          <div class="card_reviewer-colors-bottom"></div>
-
-        </div>
-        <div class="card_stats">
-          <div>
-            <div class="card_stats-number">46</div>
-            <div class="card_stats-text">Hours played</div>
-          </div>
-          <div>
-            <div class="card_stats-number">32<div class="card_stats-subscript">/80</div></div>
-            <div class="card_stats-text">Achievements</div>
-          </div>
-        </div>
-      </div>
-      <div>
-        <img src="/img/testseige.jpg">
-        <div class="card_reviewer">
-          <div class="card_reviewer-colors-top"></div>
-          <div class="card_reviewer-diamond"></div>
-          <div class="card_reviewer-colors-bottom"></div>
-
-        </div>
-        <div class="card_stats">
-          <div>
-            <div class="card_stats-number">46</div>
-            <div class="card_stats-text">Hours played</div>
-          </div>
-          <div>
-            <div class="card_stats-number">32<div class="card_stats-subscript">/80</div></div>
-            <div class="card_stats-text">Achievements</div>
-          </div>
-        </div>
-      </div>
+      
     </section>
     <div id="game_article_01">
       
