Added next in review game

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -49,11 +49,30 @@
         </div>
         <div class="card_stats">
           <div>
-            <div class="card_stats-number">0</div>
+            <div class="card_stats-number">1</div>
             <div class="card_stats-text">Hours played</div>
           </div>
           <div>
-            <div class="card_stats-number">0<div class="card_stats-subscript"> / 20</div></div>
+            <div class="card_stats-number">3<div class="card_stats-subscript"> / 20</div></div>
+            <div class="card_stats-text">Achievements</div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <img src="/img/intothebreach.jpg">
+        <div class="card_reviewer">
+          <div class="card_reviewer-colors-top"></div>
+          <div class="card_reviewer-text"> In Review </div>
+          <div class="card_reviewer-colors-bottom"></div>
+
+        </div>
+        <div class="card_stats">
+          <div>
+            <div class="card_stats-number">21</div>
+            <div class="card_stats-text">Hours played</div>
+          </div>
+          <div>
+            <div class="card_stats-number">20<div class="card_stats-subscript"> / 55</div></div>
             <div class="card_stats-text">Achievements</div>
           </div>
         </div>
